# watch-list

./: .gitignore  Cargo.toml  README.md  anime-list  config.ini
lists/: old-anime-list.txt
src/: base.rs  cli.rs  extension.rs  extra.rs  logger.rs  main.rs  model.rs  parser.rs
src/extension/: mod.rs
